[tool.poetry]
name = "dpo-alignment-mistral-7b"
version = "0.1.0"
description = ""
authors = ["teome <domkelly1010@gmail.com>"]
license = "MIT"
readme = "README.md"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[[tool.poetry.source]]
name = "torch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[tool.poetry.dependencies]
python = "^3.10"

torch = [
  {version = "^2.1.0", source = "PyPI", markers = "extra != 'cpu'"},
  {version = "^2.1.0", source = "torch-cpu", markers = "extra == 'cpu'", optional = true},
]

accelerate = "==0.26.1"
bitsandbytes = "==0.42.0"
black = "==23.1.0"
datasets = "==2.16.1"
transformers = ">=4.38.1"
evaluate = "==0.4.1"
trl = "==0.7.11"
peft =  "==0.8.2"
pillow = "*"

deepspeed = "==0.12.2"
einops = ">=0.6.1"
hf_transfer = ">=0.1.4"
huggingface-hub = ">=0.19.2,<1.0"
isort = ">=5.12.0"
parameterized = ">=0.9.0"
protobuf = "<=3.20.2"  # Needed to avoid conflicts with `transformers`
python-dotenv = "^1.0.0"
safetensors = ">=0.3.3"
sentencepiece = ">=0.1.99"
tensorboard = "*"
jinja2 = ">=3.0.0"
jupyter = "*"
tqdm = ">=4.64.1"
wandb = "*"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
flash_attn = "*"
ninja = ">=1.11.1"
packaging = ">=23.0"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
flake8 = ">=6.0.0"
mypy = "*"
pytest = "*"

[tool.poetry.extras]
cpu = ["torch"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
